--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -37,7 +37,7 @@
             <input type="password" name="password2" autocomplete="new-password" required="" id="id_password2" placeholder="비밀번호 (확인)">
           </div>
       </div>
-      <button id="signup__1st__btn" onclick="signup1Function()">다음</button>
+      <button type="button" id="signup__1st__btn" onclick="signup1Function()">다음</button>
       <div id="sub__reg__menu">
         회원가입 시, MOCO가 제공하는 서비스를 모두 이용하실 수 있습니다. MOCO의
         <button id="openBtn1">서비스 이용약관</button>,
