--- a/posts/templates/posts/main_detail.html
+++ b/posts/templates/posts/main_detail.html
@@ -68,8 +68,13 @@
             <div class="main_detail__like_delete_revise">
               <div class="main_detail__top__like">
                 <button id="{{post.id}}" onclick="post_like(this.id)">
-                  <i id="blank" class="fa-regular fa-heart"></i>
-                  <span id="like_count">{{post.likes}}</span>
+                {% if like_user %}
+                <i id="blank" class="fa-solid fa-heart"></i> <!-- 빨간색 채워져 있는 하트-->
+                <span id="like_count">{{post.likes}}</span>
+                {% else %}
+                <i id="blank" class="fa-regular fa-heart"></i> <!--비어있는 하트-->
+                <span id="like_count">{{post.likes}}</span>
+                {% endif %}
                 </button>
               </div>
               <div class="main_detail__delete_revise">
