--- a/static/css/main.css
+++ b/static/css/main.css
@@ -161,3 +161,33 @@
   }
 
 }
+
+/* 애니메이션 */
+#main #banner .container-row__right img{
+  animation: up-down 1.4s infinite ease-in-out alternate;
+}
+
+@keyframes up-down{
+  from{
+    transform: translatey(0px);
+  }
+  to{
+    transform: translatey(-20px);
+  }
+}
+
+#main #banner .container-row__left, #main #introduce .container-column {
+  animation: fadeInUp 1s;
+  transition-delay: 1s;
+}
+
+@keyframes fadeInUp {
+  0% {
+      opacity: 0;
+      transform: translate3d(0, 50%, 0);
+  }
+  to {
+      opacity: 1;
+      transform: translateZ(0);
+  }
+}
