--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -45,8 +45,8 @@
               <li><a href="{% url 'posts:review_home' %}">모각코 후기</a></li>
             </ul>
           </li>
-          <li><a href="{% url 'place:home' %}">플레이스</a></li>
-          <li><a href="{% url 'notice:home' %}">공지사항</a></li>
+          <li class="base__dropdown"><a href="{% url 'place:home' %}">플레이스</a></li>
+          <li class="base__dropdown"><a href="{% url 'notice:home' %}">공지사항</a></li>
         </ul>
 
         <ul class="navbar__shortcut">
