--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -4,7 +4,7 @@
 {% static 'img/google_login.png' as google_button %}
 {% static 'img/kakao_login.png' as kakao_button %}
 {% static 'img/github_login.png' as github_button %}
-<main>
+<main id="login">
 	<div class="login__container">
 		<div class="login__nor">
 			<span>MOCO</span>
