--- a/posts/templates/posts/main.html
+++ b/posts/templates/posts/main.html
@@ -56,6 +56,7 @@
         </div>
         <div id="main__search_div__tag">
           <ul class="main__search_li__tag_flex">
+            <li>dddddd</li>
           </ul>
         </div>
         <div id="main__info_div__top">
