--- a/static/css/post_main.css
+++ b/static/css/post_main.css
@@ -194,7 +194,7 @@
 
 .main__info_li__tag_flex li {
   border-radius: 5px;
-  background-color: rgb(221, 221, 221);
+  background-color: #e8e8e8;
   font-size: 10px;
   padding: 7px;
   margin-right: 7px;
@@ -202,9 +202,9 @@
 
 .main__search_li__tag_flex li {
   border-radius: 5px;
-  background-color: rgb(221, 221, 221);
-  font-size: 12px;
-  padding: 6px;
+  background-color: #e8e8e8;
+  font-size: 15px;
+  padding: 10px;
   margin-right: 10px;
 }
 
