[feat] 닉네임, 이메일 중복 시 팝업

--- a/users/templates/users/social_error.html
+++ b/users/templates/users/social_error.html
@@ -1,4 +1,4 @@
-{% extends 'users/account_base.html' %} {% block content %}
+{% extends 'users/base.html' %} {% block content %}
 <main>
   <div id="social-error__container">
     <div id="social-error__title">
