--- a/static/css/reset_pw_done.css
+++ b/static/css/reset_pw_done.css
@@ -64,7 +64,7 @@ main {
   border: 0;
   font-size: 1rem;
   border-radius: 0.5rem;
-  background-color: #2f52f5;
+  background-color: #2253ff;
   color: #fff;
   font-weight: 900;
 }
