--- a/static/css/social_error.css
+++ b/static/css/social_error.css
@@ -43,3 +43,17 @@ main {
   flex-direction: row;
   justify-content: center;
 }
+
+#social-error__btn {
+  cursor: pointer;
+  margin-top: 1rem;
+  width: 20rem;
+  height: 4rem;
+  outline: 0;
+  border: 0;
+  font-size: 1rem;
+  border-radius: 0.5rem;
+  background-color: #2253ff;
+  color: #fff;
+  font-weight: 900;
+}
