--- a/users/templates/users/find_id.html
+++ b/users/templates/users/find_id.html
@@ -53,7 +53,7 @@
       {% elif users %}
       <div id="search__modal" class="search__result; modal-overlay">
         <div class="modal__window">
-          <div class="modal-close">x</div>
+          <div class="modal-close"><i class="fa-solid fa-xmark"></i></div>
           <div class="modal__content">
             {% for user in users %}
             <p style="font-size: 1rem; font-weight: 300">
