--- a/users/templates/users/profile_add.html
+++ b/users/templates/users/profile_add.html
@@ -1,4 +1,4 @@
-{% extends 'users/account_base.html' %} {% block content %}
+{% extends 'users/base.html' %} {% block content %}
 {% load static %}
 <main>
   <div id="profile-add__container">
