--- a/users/templates/users/profile_edit.html
+++ b/users/templates/users/profile_edit.html
@@ -1,9 +1,9 @@
-{% extends 'users/account_base.html' %} {% block content %}
+{% extends 'users/base.html' %} {% block content %}
 {% load static %}
 <main>
   <div id="profile-edit__container">
     <span class="profile-edit__title">프로필 수정</span>
-    <form method="post" action="{% url 'users:profile_edit' id %}" enctype="multipart/form-data" onsubmit="return false">
+    <form method="post" action="{% url 'users:profile_edit' id %}" enctype="multipart/form-data" onkeyPress="if (event.keyCode==13){return false;}">
       {% csrf_token %}
         <div class="input__edit__name">
             {{ form.name.errors }}
@@ -137,7 +137,7 @@
             <!-- 수정확인 모달 -->
             <div id="cf__modal" class="modal-overlay" style="display: none;">
                 <div class="modal__window">
-                    <div class="modal-close">x</div>
+                    <div class="modal-close"><i class="fa-solid fa-xmark"></i></div>
                     <div class="modal__content">
                         <p style="margin-top:3rem; font-size: 1.3rem; font-weight: 900">프로필 수정 사항을 저장할까요?</p>
                         <div id="cf__modal__btns">
@@ -215,6 +215,12 @@
         var dup_email = document.getElementById("dup_email")
         console.log(dup_email)
 
+        if (dup_email.value !== null ) {
+            alert("이미 존재하는 이메일입니다.");
+            email_id.focus();
+            return false
+        }
+
         var uname = document.getElementById("id_name");
         var nickname = document.getElementById("id_nickname")
         var email_id = document.getElementById("id_email");
@@ -278,8 +284,6 @@
         }
     })
 
-    function submitCf() {
-        submit
-    }
+    form.submit()
 </script>
 {% endblock %}
