--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -1,4 +1,4 @@
-{% extends 'users/account_base.html' %} {% block content %}
+{% extends 'users/base.html' %} {% block content %}
 {% load static %}
 {% static 'img/naver_login.png' as naver_button %}
 {% static 'img/google_login.png' as google_button %}
@@ -37,7 +37,7 @@
             <input type="password" name="password2" autocomplete="new-password" required="" id="id_password2" placeholder="비밀번호 (확인)">
           </div>
       </div>
-      <button id="signup__1st__btn" onclick="signup1Function()">다음</button>
+      <button id="signup__1st__btn" type="button" onclick="signup1Function()">다음</button>
       <div id="sub__reg__menu">
         회원가입 시, MOCO가 제공하는 서비스를 모두 이용하실 수 있습니다. MOCO의
         <button id="openBtn1">서비스 이용약관</button>,
@@ -515,7 +515,7 @@
           
             <option value="Student">학생</option>
           
-            <option value="Job_Seeker">취준생</option>
+            <option value="Job_Seeker">취준생</option>/logout/
           
             <option value="Worker">직장인</option>
           
@@ -536,7 +536,7 @@
           <textarea name="desc" cols="40" rows="5" maxlength="100" id="id_desc" placeholder="100자 이내로 입력해주세요."></textarea>
         </div>
       </div>
-      <button id="signup__2nd__btn" onclick="signup2Function();">가입 완료</button>
+      <button id="signup__2nd__btn" type="submit" onclick="signup2Function();">가입 완료</button>
     </div>
   </div>
   </form>
