--- a/users/templates/users/signup_error.html
+++ b/users/templates/users/signup_error.html
@@ -1,4 +1,4 @@
-{% extends 'users/account_base.html' %} {% block content %}
+{% extends 'users/base.html' %} {% block content %}
 <main>
     <!-- 뒷배경 -->
     <form
