--- a/posts/templates/posts/main_detail.html
+++ b/posts/templates/posts/main_detail.html
@@ -222,15 +222,15 @@
           </div>
           <div id="main_detail__comment__contents__reply">
             {% for recomment in comment.comment_set.all %}
-            <div class="main_detail__comment__contents__reply_bundle">
+            <div class="main_detail__comment__contents__reply_bundle__{{recomment.id}}">
               <div class="reply_user_name">ㄴ@{{recomment.user.nickname}}	&nbsp;</div>
               <div class="reply_txt">{{recomment.content}}</div>
               <div class="main_detail__recomments_revise_delete_btn">
                 <div class="main_detail__recomments_revise_btn">
-                  <button onclick="changeForm4({{comment.id}}, '{{recomment.content}}');">수정</button>
+                  <button onclick="changeForm4({{recomment.id}}, '{{recomment.content}}');">수정</button>
                 </div>
                 <div class="main_detail__recomments_delete_btn">
-                  <button onclick="onClickdeleteRecmt({{comment.id}});">삭제</button>
+                  <button onclick="onClickdeleteRecmt({{recomment.id}});">삭제</button>
                 </div>
               </div>
             </div>
@@ -469,7 +469,8 @@
 
   // 대댓글 수정
   const changeForm4 = (id, content) => {
-    const reviseRecmt = document.getElementById(`main_detail_comment_contents_reply_form__${id}`)
+    const reviseRecmt = document.querySelector(`.main_detail__comment__contents__reply_bundle__${id}`)
+    console.log(reviseRecmt)
     reviseRecmt.innerHTML = `<form action="/comment/revise/${id}" method="post">{% csrf_token %}<textarea type="text" name="content">${content}</textarea><input type="submit" value="등록"/><a href="{% url 'posts:detail' post.id %}">취소</a></form>`
   }
 
@@ -493,10 +494,12 @@
   recmtDelete.onreadystatechange = () => {
       if (recmtDelete.readyState === XMLHttpRequest.DONE){
           if(recmtDelete.status < 400){
-              const {id, len} = JSON.parse(cmtDelete.response);
-              const topdomRcmt = document.getElementById("main_detail__comment__contents");
-              const deletedomRcmt = document.getElementById(`main_detail_comment_contents_reply_form__${id}`);
-              topdomRcmt.removeChild(deletedom);
+              const {id, len} = JSON.parse(recmtDelete.response);
+              const topdomRcmt = document.getElementById("main_detail__comment__contents__reply");
+              console.log(topdomRcmt)
+              const deletedomRcmt = document.querySelector(`.main_detail__comment__contents__reply_bundle__${id}`)
+              console.log(deletedomRcmt)
+              topdomRcmt.removeChild(deletedomRcmt);
           }
       }
   }
@@ -578,7 +581,7 @@
       if (rvwDelete.readyState === XMLHttpRequest.DONE){
           if(rvwDelete.status < 400){
               const {id} = JSON.parse(rvwDelete.response);
-              const topdom = document.getElementById("main_detail__review__contents");
+              const topdom = document.getElementById("main_detail__comment__contents__reply");
               const deletedom = document.getElementById(`main_detail__review__each__contents__${id}`);
               topdom.removeChild(deletedom);
           }
