--- a/place/templates/place/home.html
+++ b/place/templates/place/home.html
@@ -67,7 +67,13 @@
           </span>
           <span>
             <span style="margin-right: 0.5rem;"><i class="fa-solid fa-comment-dots"></i>{{place.comment_set.all|length}}</span>
-            <span><i class="fa-regular fa-heart"></i>{{place.likes}}</span>
+              {% if place.user in place.like_users.all %}
+              <i id="blank" class="fa-solid fa-heart" style="color: #ff1d2f;"></i> <!-- 빨간색 채워져 있는 하트-->
+              <span id="like_count">{{place.likes}}</span>
+              {% else %}
+              <i id="blank" class="fa-regular fa-heart"></i> <!--비어있는 하트-->
+              <span id="like_count">{{place.likes}}</span>
+              {% endif %}
           </span>
         </div>
       </a>
