--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="{% static 'css/profile_view.css' %}" />
     <link rel="stylesheet" href="{%static 'css/login.css' %}" />
     <link rel="stylesheet" href="{%static 'css/signup.css' %}" />
+    <link rel="stylesheet" href="{%static 'css/signup_error.css' %}" />
     <link rel="stylesheet" href="{%static 'css/find_id.css' %}" />
     <link rel="stylesheet" href="{%static 'css/register.css' %}" />
     <link rel="stylesheet" href="{%static 'css/change_pw.css' %}" />
