--- a/posts/templates/posts/main_detail.html
+++ b/posts/templates/posts/main_detail.html
@@ -183,7 +183,11 @@
           <div id="post_detail__comment__contents__profile">
             <div class="main_detail__comment__contetns__profile_userinfo">
               <div id="main_detail__comment__contents__img">
-                <i class="fa-solid fa-circle-user fa-2x"></i>
+                {% if comment.user.profile_img %}
+                <img src="{{comment.user.profile_img.url}}" width="45px" alt="profile_img"></img>
+                {% else %}
+                <img src="/static/img/moco_symbol.png" width="45px" alt="profile_img"></img>
+                {% endif %}
               </div>
               <div id="main_detail__comments__contents__info">
                 <div id="main_detail__comments__contents__name">
@@ -238,7 +242,6 @@
           </div>
         </div>
       </div>
-      
       {% endfor %}
     </div>
   </div>
@@ -293,10 +296,13 @@
           <div class="review__contents_box__user_info">
             <div class="review__contents_box__profile">
               <div class="review__contents_box__profile_img">
-                <i class="fa-solid fa-circle-user fa-3x"></i>
-                <img src="{{review.user.profile_img}}" alt="profile_img"></img>
+                {% if user.profile_img %}
+                <img src="{{user.profile_img.url}}" alt="profile_img"></img>
+                {% else %}
+                <img src="/static/img/moco_symbol.png" alt="profile_img"></img>
+                {% endif %}
               </div>
-              <div class="review__contents_box__info">
+              <div class="main_detail_review__contents_box__info">
                 <div class="main_detail__contents__profile_name">
                   <span>{{review.user.nickname}}</span>
                 </div>
@@ -315,19 +321,27 @@
             </div>
             {%endif%}
           </div>
-          <div class="main_detail__review__contents_revise">
-            <i class="fa-solid fa-ellipsis fa-2x" style="color: #BFBFBF"></i>
+          <div class="main_detail__review__contents__options">
             {% if review.user == request.user %}
-            <button onclick="changeForm3({{review.id}}, '{{review.content}}');">수정</button>
-            <button onclick="onClickdelete2({{review.id}})">삭제</button>
-            {%endif%}
+            <div class="main_detail__review_dropdown_btn">
+              <i class="fa-solid fa-ellipsis fa-2x" style="color: #BFBFBF"></i>
+            </div>
+            <div class="main_detail__review_dropdown_menu">
+              <div class="main_detail__review_dropdown_menu_revise">
+                <button onclick="changeForm3({{review.id}}, '{{review.content}}');">수정</button>
+              </div>
+              <div class="main_detail__review_dropdown_menu_delete">
+                <button onclick="onClickdelete2({{review.id}})">삭제</button>
+              </div>
+            </div>
+            {% endif%}
           </div>
         </div>
-        <div class="main_detail__review__contents_content__{{review.id}}">
+        <div class="main_detail__review__contents_content__{{review.id}} main_detail__img_size">
           {% if review.image %}
           <img src="{{review.image.url}}"/>
           {% else %}
-          <p>no image</p>
+          <img src="/static/img/tag.png" alt="">
           {% endif %}
           <div class="main_detail__review__contents_text">
             {{review.content}}
@@ -342,15 +356,18 @@
           <div class="review__contents_box__user_info">
             <div class="review__contents_box__profile">
               <div class="review__contents_box__profile_img">
-                <i class="fa-solid fa-circle-user fa-3x"></i>
-                <img src="{{review.user.profile_img}}" alt="profile_img"></img>
+                {% if user.profile_img %}
+                <img src="{{user.profile_img.url}}" alt="profile_img"></img>
+                {% else %}
+                <img src="/static/img/moco_symbol.png" alt="profile_img"></img>
+                {% endif %}
               </div>
-              <div class="review__contents_box__info">
+              <div class="main_detail_review__contents_box__info">
                 <div class="main_detail__contents__profile_name">
                   <span>{{review.user.nickname}}</span>
                 </div>
                 <div class="main_detail__contents__profile_time">
-                  <span>{{review.write_at|date:"Y. m. d."}}</span>
+                  <span>{{review.write_at|date:"Y. m. d" }}</span>
                 </div>
               </div>
             </div>
@@ -364,19 +381,27 @@
             </div>
             {%endif%}
           </div>
-          <div class="main_detail__review__contents_revise">
-            <i class="fa-solid fa-ellipsis fa-2x" style="color: #BFBFBF"></i>
+          <div class="main_detail__review__contents__options">
             {% if review.user == request.user %}
-            <button onclick="changeForm3({{review.id}}, '{{review.content}}');">수정</button>
-            <button onclick="onClickdelete2({{review.id}})">삭제</button>
-            {%endif%}
+            <div class="main_detail__review_dropdown_btn">
+              <i class="fa-solid fa-ellipsis fa-2x" style="color: #BFBFBF"></i>
+            </div>
+            <div class="main_detail__review_dropdown_menu">
+              <div class="main_detail__review_dropdown_menu_revise">
+                <button onclick="changeForm3({{review.id}}, '{{review.content}}');">수정</button>
+              </div>
+              <div class="main_detail__review_dropdown_menu_delete">
+                <button onclick="onClickdelete2({{review.id}})">삭제</button>
+              </div>
+            </div>
+            {% endif%}
           </div>
         </div>
-        <div class="main_detail__review__contents_content__{{review.id}}">
+        <div class="main_detail__review__contents_content__{{review.id}} main_detail__img_size">
           {% if review.image %}
           <img src="{{review.image.url}}"/>
           {% else %}
-          <p>no image</p>
+          <img src="/static/img/tag.png" alt="">
           {% endif %}
           <div class="main_detail__review__contents_text">
             {{review.content}}
@@ -387,9 +412,9 @@
     {% endif %}
     {% endfor %}
     </div>
-    <div>
+    <div class="post_detail__review__page">
       {% if reviews.has_previous %}
-        <a href="?page={{reviews.previous_page_number}}">이전</a>
+        <a href="?page={{reviews.previous_page_number}}" class="post_detail__review__page_previous">이전</a>
       {% endif %}
     
       {% for p in reviews.paginator.page_range %}
@@ -397,7 +422,7 @@
       {% endfor %}
                 
       {% if reviews.has_next %}
-            <a href="?page={{reviews.next_page_number}}">다음</a>
+            <a href="?page={{reviews.next_page_number}}" class="post_detail__review__page_next">다음</a>
       {% endif %}
     </div>
   </div>
