--- a/static/css/place_home.css
+++ b/static/css/place_home.css
@@ -27,7 +27,8 @@
   margin: 1rem 0;
 }
 
-.place-search, .place-search__content {
+.place-search,
+.place-search__content {
   width: 100%;
 }
 
@@ -42,13 +43,13 @@
   margin-right: 1rem;
 }
 
-.place-search__btn{
+.place-search__btn {
   flex-basis: 100px;
   flex-grow: 1;
 }
 
 .place-search__btn {
-  background-color: #2253FF;
+  background-color: #2253ff;
   border: none;
   border-radius: 0.5rem;
   color: white;
@@ -211,7 +212,7 @@
   -webkit-text-stroke-color: gold;
 }
 
-.star-ratings-fill > span{
+.star-ratings-fill > span {
   padding: 0 0.08rem;
 }
 
@@ -241,12 +242,141 @@
   margin: 4rem 0 3rem 0;
 }
 
-.content-pagination .active>.page-link {
-  background-color: #2253FF;
+.content-pagination .active > .page-link {
+  background-color: #2253ff;
   color: white;
 }
 
 .content-pagination .pagination {
-  --bs-pagination-color : #2253FF;
-  --bs-pagination-disabled-color: #8C8C8C;
+  --bs-pagination-color: #2253ff;
+  --bs-pagination-disabled-color: #8c8c8c;
+}
+
+/*place_detail 댓글*/
+
+.place_detail__comment__each__contents_div {
+  border-bottom: 1px solid rgb(162, 162, 162);
+  padding-top: 23px;
+  padding-bottom: 23px;
+}
+
+.place_detail__comment__contetns__profile_userinfo {
+  display: flex;
+}
+
+.place_detail__comments__contents__options {
+  position: relative;
+  display: inline-flex;
+  height: 100%;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+.place_detail__comments__contents__options:hover
+  .place_detail__comments_dropdown_menu {
+  display: block;
+}
+
+.place_detail__comments__contents__options i {
+  margin-top: 23px;
+}
+
+.place_detail__comments__contents__options:hover,
+.place_detail__comments_dropdown_menu_revise button:hover,
+.place_detail__comments_dropdown_menu_delete button:hover {
+  color: #2253ff !important;
+}
+
+.place_detail__comments__contents__options:hover
+  > .place_detail__comments_dropdown_menu {
+  display: block;
+}
+
+.place_detail__comments__contents__options:hover
+  .place_detail__comments_dropdown_menu {
+  display: block;
+  opacity: 1;
+}
+
+.place_detail__comments_dropdown_btn {
+  margin-right: 10px;
+  margin-bottom: 2px;
+}
+
+.place_detail__comments_dropdown_menu_revise:hover {
+  background-color: #e9f7ff;
+}
+
+.place_detail__comments_dropdown_menu_delete:hover {
+  background-color: #e9f7ff;
+}
+
+.place_detail__comments_dropdown_menu {
+  display: block;
+  text-decoration: none;
+  color: rgb(37, 37, 37);
+  font-weight: 400;
+  font-size: 0.9rem;
+  background-color: white;
+  line-height: 25px;
+  text-align: center;
+  position: absolute;
+  opacity: 0;
+  z-index: 1; /*다른 요소들보다 앞에 배치*/
+  width: 4em;
+  top: 100%;
+  padding: 0.5rem 0;
+  box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.2);
+}
+
+.place_detail_comment_reply_btn {
+  border: 1px solid #8c8c8c;
+  display: inline-block;
+  padding: 5px;
+  margin-top: 10px;
+}
+
+.place_detail_comment_reply_btn button {
+  color: #8c8c8c;
+}
+
+.place_detail_commnet_reply_form {
+  margin-top: 10px;
+}
+
+.place_detail__reply_user_name {
+  color: #2253ff;
+  font-size: 13px;
+}
+
+.place_detail__recomments_revise_delete_btn {
+  display: none;
+  position: relative;
+  z-index: 1;
+  align-items: flex-end;
+  margin-left: 5px;
+}
+
+.place_detail__recomments_revise_delete_btn button {
+  display: flex;
+}
+
+.place_detail__comment__contents__reply_bundle:hover
+  .place_detail__recomments_revise_delete_btn {
+  display: flex;
+}
+
+.place_detail__recomments_revise_btn {
+  border: 1px solid black;
+  margin-left: 3px;
+  font-size: 13px;
+  padding: 3px;
+}
+
+.place_detail__recomments_delete_btn {
+  border: 1px solid black;
+  margin-left: 3px;
+  font-size: 13px;
+  padding: 3px;
 }
