[fix] post main 꺾쇠

--- a/static/css/post_main_detail.css
+++ b/static/css/post_main_detail.css
@@ -253,6 +253,7 @@
 
 .main_detail__comment__contetns__profile_userinfo {
   display: flex;
+}
 
 #main_detail__comments__contents__info {
 	display: inline-block;
